--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,10 +3,10 @@
 backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
-media_folder: 'assets/uploads'
+media_folder: '/img'
 collections:
-  - name: 'blog'
-    label: 'Blog'
-    folder: '_posts/'
+  - name: 'modules'
+    label: 'Modules'
+    folder: 'modules/content/_posts/'
     fields:
-      - { name: Title }
+      - {label: "Title", name: "title", widget: "string"}
